# seamless-optimization

./: .gitignore  CMakeLists.txt  README.md  fandisk_CG.json  fandisk_LDLT.json  solver_comparison.csv
app/: cut_mesh.cpp  example.json  main.cpp  view_mesh.cpp  view_output.cpp
cmake/: libigl.cmake  polyscope.cmake
data/: example.json  fandisk.json
data/EE/: fandisk_EE.txt  fandiskaligned_EE.txt
data/FE/: fandiskaligned_FE.txt
data/closed_myles/: _pipeline.json  _pipeline_render_myles.json  _pipeline_render_quality.json  _pipeline_temp.json
data/closed_myles/armadillo_output/: armadillo_endpoints  armadillo_flip_seq  armadillo_fn_to_f  armadillo_is_cut_h  armadillo_metric_coords  armadillo_overlay_with_uv_cut_to_sin_list.pickle  armadillo_vn_to_v  iteration_data_log.csv
data/closed_myles/armchair_output/: armchair_endpoints  armchair_flip_seq  armchair_fn_to_f  armchair_metric_coords  armchair_refined_with_uv_cut_to_sin_list.pickle  armchair_vn_to_v  iteration_data_log.csv
data/closed_myles/bimba100K_output/: bimba100K_endpoints  bimba100K_flip_seq  bimba100K_fn_to_f  bimba100K_metric_coords  bimba100K_refined_with_uv_cut_to_sin_list.pickle  bimba100K_vn_to_v  iteration_data_log.csv
data/closed_myles/blade_output/: blade_endpoints  blade_flip_seq  blade_fn_to_f  blade_metric_coords  blade_overlay_with_uv_cut_to_sin_list.pickle  blade_vn_to_v  iteration_data_log.csv
data/closed_myles/block_output/: block_endpoints  block_flip_seq  block_fn_to_f  block_is_cut_h  block_metric_coords  block_overlay_with_uv_cut_to_sin_list.pickle  iteration_data_log.csv
data/closed_myles/botijo_output/: botijo_endpoints  botijo_fn_to_f  botijo_metric_coords  botijo_overlay_with_uv_cut_to_sin_list.pickle  botijo_vn_to_v  iteration_data_log.csv
data/closed_myles/bozbezbozzel100K_output/: bozbezbozzel100K_endpoints  bozbezbozzel100K_flip_seq  bozbezbozzel100K_fn_to_f  bozbezbozzel100K_metric_coords  bozbezbozzel100K_overlay_with_uv_cut_to_sin_list.pickle  bozbezbozzel100K_vn_to_v  iteration_data_log.csv
data/closed_myles/bozbezbozzel50K_output/: bozbezbozzel50K_endpoints  bozbezbozzel50K_flip_seq  bozbezbozzel50K_fn_to_f  bozbezbozzel50K_is_cut_h  bozbezbozzel50K_metric_coords  bozbezbozzel50K_refined_with_uv_cut_to_sin_list.pickle  bozbezbozzel50K_vn_to_v  iteration_data_log.csv
data/closed_myles/brain100k_output/: brain100k_cut_to_sin_list.pickle  brain100k_endpoints  brain100k_flip_seq  brain100k_fn_to_f  brain100k_metric_coords  brain100k_vn_to_v  iteration_data_log.csv
data/closed_myles/bumpy_sphere_output/: bumpy_sphere_endpoints  bumpy_sphere_flip_seq  bumpy_sphere_fn_to_f  bumpy_sphere_is_cut_h  bumpy_sphere_metric_coords  bumpy_sphere_overlay_with_uv_cut_to_sin_list.pickle  iteration_data_log.csv
data/closed_myles/bumpy_torus_output/: bumpy_torus_endpoints  bumpy_torus_flip_seq  bumpy_torus_fn_to_f  bumpy_torus_is_cut_h  bumpy_torus_metric_coords  bumpy_torus_overlay_with_uv_cut_to_sin_list.pickle  iteration_data_log.csv
data/closed_myles/bunnyBotsch_output/: bunnyBotsch_cut_to_sin_list.pickle  bunnyBotsch_endpoints  bunnyBotsch_fn_to_f  bunnyBotsch_vn_to_v  iteration_data_log.csv
data/closed_myles/buste_output/: buste_cut_to_sin_list.pickle  buste_endpoints  buste_flip_seq  buste_fn_to_f  buste_metric_coords  buste_vn_to_v  iteration_data_log.csv
data/closed_myles/camel_output/: camel_endpoints  camel_flip_seq  camel_fn_to_f  camel_metric_coords  camel_overlay_with_uv_cut_to_sin_list.pickle  camel_vn_to_v  iteration_data_log.csv
data/closed_myles/camille_hand100K_output/: camille_hand100K_cut_to_sin_list.pickle  camille_hand100K_endpoints  camille_hand100K_flip_seq  camille_hand100K_fn_to_f  camille_hand100K_metric_coords  camille_hand100K_vn_to_v  iteration_data_log.csv
data/closed_myles/carter100K_output/: carter100K_cut_to_sin_list.pickle  carter100K_endpoints  carter100K_flip_seq  carter100K_fn_to_f  carter100K_metric_coords  carter100K_vn_to_v  iteration_data_log.csv
data/closed_myles/casting_refined_output/: casting_refined_endpoints  casting_refined_flip_seq  casting_refined_fn_to_f  casting_refined_is_cut_h  casting_refined_metric_coords  casting_refined_overlay_with_uv_cut_to_sin_list.pickle  iteration_data_log.csv
data/closed_myles/chair100K_output/: chair100K_cut_to_sin_list.pickle  chair100K_endpoints  chair100K_flip_seq  chair100K_fn_to_f  chair100K_metric_coords  chair100K_vn_to_v  iteration_data_log.csv
data/closed_myles/chair_output/: chair_endpoints  chair_fn_to_f  chair_metric_coords  chair_overlay_with_uv_cut_to_sin_list.pickle  chair_vn_to_v  iteration_data_log.csv
data/closed_myles/cow2_output/: cow2_endpoints  cow2_flip_seq  cow2_fn_to_f  cow2_is_cut_h  cow2_metric_coords  cow2_refined_with_uv_cut_to_sin_list.pickle  iteration_data_log.csv
data/closed_myles/cup_output/: cup_cut_to_sin_list.pickle  cup_endpoints  cup_flip_seq  cup_fn_to_f  cup_is_cut_h  cup_metric_coords  iteration_data_log.csv
data/closed_myles/dancer2_output/: dancer2_endpoints  dancer2_flip_seq  dancer2_fn_to_f  dancer2_is_cut_h  dancer2_metric_coords  dancer2_refined_with_uv_cut_to_sin_list.pickle  iteration_data_log.csv
data/closed_myles/dancer_25k_output/: dancer_25k_cut_to_sin_list.pickle  dancer_25k_endpoints  dancer_25k_flip_seq  dancer_25k_fn_to_f  dancer_25k_is_cut_h  dancer_25k_metric_coords  dancer_25k_vn_to_v  iteration_data_log.csv
data/closed_myles/dancing_children100K_output/: dancing_children100K_cut_to_sin_list.pickle  iteration_data_log.csv  (+5 more)
include/: ExtremeOpt.h  MeshCutter.h  Parameters.h  SYMDIR_NEW.h  autodiff_jakob.h  energy.h  main_helper.h  rref.h  smooth_utils.h  union_find.h
py_codes/: animation.py  aspect_rato.py  convergence_by_solver_and_p.csv  graph.py  hessian_read.py  histograms.py  nb2.ipynb  notebook1.ipynb  process_and_merge_files.py  run_experiments.py  screenshots.py  simplify.ipynb  symmetric.py  table.py
scripts/: histogram.py  symmetric_dirichlet.py
src/: ExtremeOpt.cpp  MeshCutter.cpp  SYMDIR_NEW.cpp  energy.cpp  main_helper.cpp  opt.cpp  opt_utils.cpp  pybind.cpp  rref.cpp  smooth.cpp  smooth_utils.cpp
(+498 files in other folders)
